--- a/contacto.html
+++ b/contacto.html
@@ -69,8 +69,9 @@
 	</div>
 </div>
 <div class="map-container">
-	<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d482.6296314008991!2d-87.84208838531951!3d14.596964645843942!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2shn!4v1685931947828!5m2!1sen!2shn" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div>  
+	<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d482.6296314008991!2d-87.84208838531951!3d14.596964645843942!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2shn!4v1685931947828!5m2!1sen!2shn" width="600" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+	<iframe class="bot" src="https://web.powerva.microsoft.com/environments/Default-84c31ca0-ac3b-4eae-ad11-519d80233e6f/bots/new_bot_b89c1a2ca02b40ce93957efcfae8afc0/webchat" frameborder="0" style="width: 500px; height: 500px;"></iframe>
+</div> 
 
 <footer class="footer">
 	<div class="footer__addr">
